--- a/app/views/four_oh_four.html
+++ b/app/views/four_oh_four.html
@@ -1,4 +1,4 @@
 <section>
-	<h1>You seem to be lost.</h1>
+	<h1>Nothing to see here, move along now.</h1>
   <img src="/images/bear.jpeg" alt="Bear">
 </section>
