--- a/app/views/four_oh_four.html
+++ b/app/views/four_oh_four.html
@@ -1,4 +1,5 @@
 <section>
 	<h1>Nothing to see here, move along now.</h1>
-  <img src="/images/bear.jpeg" alt="Bear">
+	<p>404: Page Not Found</p>
+  <img src="/images/filter.jpg" alt="Filter">
 </section>
